--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -81,18 +81,18 @@
   <section
     class="w-full h-10 bg-primary text-[#bcbcbd] flex justify-between items-center px-10"
   >
-    <div>2023 FTB Hub S.A.C. | RUC 20601715903</div>
+    <div></div>
     <div class="flex">
       <div>
         <div class="flex">
           <img class="w-5 mx-2" src="../../../assets/mail.png" alt="" />
-          <p>info@ftb.pe</p>
+          <p></p>
         </div>
       </div>
       <div class="ml-5">
         <div class="flex">
           <img class="w-5 mx-2" src="../../../assets/wts.png" alt="whatsapp">
-          <p>922 085 507</p>
+          <p></p>
         </div>
       </div>
     </div>
